--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "chart.js": "^3.5.1",
     "country-state-city": "^3.0.1",
+    "http-proxy-middleware": "^3.0.0",
     "overlay-navbar": "^1.0.4",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
@@ -35,8 +36,8 @@
     "webfontloader": "^1.6.28"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -58,5 +59,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.29.21:4000"
+  "proxy": "http://localhost:3003"
 }
